add custom ktlint rules commit_hash:9ea8c8e634343048f16e696961dbf6e90e03e726